fixed vertically misaligned labels in task list item

--- a/src/app/client/context/tasks/taskList/taskListItem/taskListItem.component.css
+++ b/src/app/client/context/tasks/taskList/taskListItem/taskListItem.component.css
@@ -149,3 +149,7 @@
 .light-initials {
   color: rgba(211, 211, 211, 0.6);
 }
+
+.date-container {
+  min-width: 100px;
+}
